# cuda-v100-kernels

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cu
common/: common.h
reduce/: Makefile  README.md  main.cu
transpose/: Makefile  README.md  main.cu
